# wunderkafka

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_.txt  setup.cfg
.github/workflows/: docs_test.yml  pull-request.yml  release.yml
dev_docs/: conf.py  index.md
dev_docs/_templates/: layout.html
dev_docs/pages/: install.md  quickstart.md
docs/: 404.html  conf.py  index.html  index.rst  requirements.txt
docs/pages/: API.md  API.rst  advanced_API.md  advanced_API.rst  advanced_usage.md  advanced_usage.rst  errata.md  errata.rst  install.rst  krb_thread.rst  quickstart.rst  rationale.md  rationale.rst
docs/pages/API/: index.html
docs/pages/advanced_API/: index.html
docs/pages/advanced_usage/: index.html
docs/pages/errata/: index.html
docs/pages/install/: index.html
docs/pages/quickstart/: index.html
docs/search/: search_index.json
docs/site/search/: search_index.json
docs_site/: index.html
docs_site/pages/API/: index.html
docs_site/pages/advanced_usage/: index.html
docs_site/pages/rationale/: index.html
examples/: consumer.py  consumer_avro.py  consumer_avro_multiple_subscriptions.py  consumer_confluent.py  factory.py  factory_config.py  factory_consumer.py  manual_krb_timeout.py  producer_avro.py  producer_avro_model.py  producer_avro_model_confluent.py
pages/errata/: index.html
pages/quickstart/: index.html
search/: search_index.json
tests/: conftest.py
tests/fixtures/config/answers/: fields.py  models.py
tests/fixtures/fs_repo/: value.avsc
tests/fixtures/schema_registry/cloudera/GET/schemas/test_signals/: versions.json
tests/fixtures/schema_registry/cloudera/GET/schemas/test_signals:k/: versions.json
tests/fixtures/schema_registry/confluent/existing/GET/schemas/ids/: 1852.json  19.json  2108.json
tests/fixtures/schema_registry/confluent/existing/POST/subjects/testing_avro_str_producer-value/: versions.json
tests/fixtures/schema_registry/confluent/existing/POST/subjects/testing_json_str_producer-value/: versions.json
tests/fixtures/schema_registry/confluent/existing/POST/subjects/testing_wunderkafka-value/: versions.json
tests/fixtures/schema_registry/confluent/update/POST/subjects/testing_wunderkafka-value/: versions.json
tests/integration/: conftest.py  test_deserializing.py  test_serializing_avromodel.py
tests/integration/cloudera/: conftest.py  test_deserializing.py  test_schema_evolving.py  test_serializing_avromodel.py
tests/integration/confluent/: conftest.py  test_deserializing.py  test_serializing_avromodel.py
tests/integration/confluent/avro/: test_avro_deserializing.py
tests/integration/confluent/avromodel/: test_avromodel_serializing.py
tests/integration/confluent/json/: test_json_deserializing.py  test_json_serializing.py
tests/integration/confluent/jsonmodel/: test_jsonmodel_serializing.py
tests/integration/confluent/mixed/: test_string_avro_deserializing.py  test_string_avromodel_serializing.py  test_string_json_deserializing.py  test_string_jsonmodel_serializing.py
tests/integration/confluent/string/: test_string_string.py
tests/integration/schemaless/: test_string_json_deserializing.py  test_string_jsonmodel_serializing.py
tests/smoke/: conftest.py  test_callbacks.py  test_config_krb.py  test_configs.py  test_factories.py
tests/unit/: test_derive.py  test_derive_inheritance.py  test_fs_repo.py  test_generate.py  test_headers.py  test_krb_timeout.py  test_krb_watchdog.py  test_parse_kinit.py  test_serialize_shemaless_json.py  test_subscription.py  test_time.py
tests/unit/derive/: test_avro_base_model.py  test_base_classes.py  test_inheritance.py  test_nested.py  test_topic_naming.py
wunderkafka/: __init__.py  callbacks.py  compat.py  errors.py  factories.py  librdkafka.py  logger.py  protocols.py  structures.py  time.py  types.py
wunderkafka/compat/: __init__.py  constants.py  types.py
wunderkafka/config/: __init__.py  generate.py  kerberos.py  rdkafka.py  schema_registry.py
wunderkafka/config/krb/: rdkafka.py  schema_registry.py
wunderkafka/consumers/: __init__.py  abc.py  bytes.py  constructor.py  robust.py  subscription.py  types.py
wunderkafka/factories/: avro.py  json.py  mixed.py  schemaless.py
wunderkafka/hotfixes/watchdog/: __init__.py  types.py
wunderkafka/hotfixes/watchdog/krb/: ticket.py
wunderkafka/producers/: __init__.py  abc.py  bytes.py  constructor.py
wunderkafka/schema_registry/: __init__.py  abc.py  cache.py  client.py  cloudera_client.py  confluent_client.py  manual_authorization.py  models.py  transport.py
wunderkafka/schema_registry/clients/: cloudera.py  compat.py  confluent.py  subject.py
wunderkafka/serdes/: abc.py  avromodel.py  headers.py  store.py  structures.py
wunderkafka/serdes/avro/: __init__.py  deserializers.py  headers.py  serializers.py  types.py
wunderkafka/serdes/avromodel/: __init__.py  derive.py  pydantic.py  serializers.py
wunderkafka/serdes/avromodel/derive/: current.py
wunderkafka/serdes/avromodel/typing/: __init__.py  compat.py
wunderkafka/serdes/compat/: typing.py
wunderkafka/serdes/json/: __init__.py  deserializers.py  serializers.py
wunderkafka/serdes/jsonmodel/: __init__.py  derive.py  serializers.py
wunderkafka/serdes/schemaless/json/: deserializers.py  serializers.py
wunderkafka/serdes/schemaless/jsonmodel/: serializers.py
wunderkafka/serdes/schemaless/string/: deserializers.py  serializers.py
wunderkafka/serdes/string/: __init__.py  deserializers.py  serializers.py
wunderkafka/tests/: __init__.py  consumer.py  producer.py  schema_registry.py
