[project]
name = "wunderkafka"
version = "0.0.0"
description = "librdkafka-powered client for Kafka for python with (hopefully) more handful API"
readme = "README.md"
keywords = ["kafka", "cloudera", "confluent"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [{name = "Kirill Tribunsky", email = "tribunsky.kir@yandex.ru"}]
urls = {"Homepage" = "https://github.com/severstal-digital/wunderkafka", "Bug Tracker" = "https://github.com/severstal-digital/wunderkafka/issues"}

[project.dependencies]
confluent-kafka = ">=1.9.0"
avro-python3 = ">=1.10.0"
dataclasses-avroschema = ">=0.53.0"
fastavro = ">=1.4.7"
pydantic-settings = ">2.0"

[project.optional-dependencies]
krb = ["requests-kerberos>=0.13.0", "python-dateutil"]
json = ["jsonschema>=4.17.3"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]

# [tool.flake8]
# max-line-length = 120
# max-complexity = 15
# exclude = ["wunderkafka/config/generated"]
# per-file-ignores = {
#     "wunderkafka/__init__.py" = "F401",
#     "wunderkafka/config/__init__.py" = "F401",
#     "wunderkafka/config/generated/enums.py" = "F811,E303",
#     "wunderkafka/config/generated/models.py" = "F811,E303,WPS432",
#     "wunderkafka/schema_registry/__init__.py" = "F401",
#     "wunderkafka/schema_registry/clients/compat.py" = "F401",
#     "wunderkafka/serdes/avro/__init__.py" = "F401",
#     "wunderkafka/serdes/avromodel/__init__.py" = "F401",
#     "wunderkafka/serdes/json/__init__.py" = "F401",
#     "wunderkafka/serdes/jsonmodel/__init__.py" = "F401",
#     "wunderkafka/tests/__init__.py" = "F401"
# }

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
line_length = 120
length_sort = true
known_first_party = ["wunderkafka", "tests"]

[tool.darglint]
docstring_style = "sphinx"

[tool.pytest.ini_options]
python_classes = "!Test"

[tool.mypy]
exclude = "examples"
plugins = ["pydantic.mypy"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
strict_optional = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
	"confluent_kafka.*",
	"dateutil.*",
	"dataclasses_avroschema.*",
	"fastavro.*",
	"loguru.*",
	"pydantic.*",
	"requests.*",
	"requests_kerberos.*",
	"setuptools.*"
]
ignore_missing_imports = true
